# my_risinglight

./: Cargo.toml  README.md  history.txt
sql/: 01-01.slt  01-03.slt
src/: db.rs  executor.rs  lib.rs  main.rs  parser.rs  types.rs
src/array/: data_chunk.rs  iter.rs  mod.rs  primitive_array.rs  utf8_array.rs
src/binder/: mod.rs
src/binder/expression/: mod.rs
src/binder/statements/: create_table.rs  insert.rs  mod.rs  select.rs
src/catalog/: column.rs  database.rs  mod.rs  schema.rs  table.rs
src/executor/: create.rs  insert.rs  mod.rs  select.rs
src/storage/memory/: mod.rs  table.rs
src/utils/: id_gen.rs
tests/: test.rs
