[package]
name = "my_risinglight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.23.0"
rustyline = "10.0.0"
anyhow = "1.0.64"
thiserror = "1.0.34"

[dev-dependencies]
sqllogictest = "0.2"
test-case = "1.2"
env_logger = "0.9.0"
